<resources>
    <string name="app_name">Notenspiegel</string>
    <string name="leerer_fach_view_text">Kein Fach eingetragen</string>
    <string name="dummy_fach_einfügen">Dummy Fach einfügen</string>
    <string name="dummy_note_einfügen">Dummy Note einfügen</string>
    <string name="action_alle_faecher_loeschen">Alle Fächer löschen</string>
    <string name="action_alle_noten_loeschen">Alle Noten löschen</string>
    <string name="noten_activity_name">Notenspiegel: Noten</string>
    <string name="hint_fach_name">Name</string>
    <string name="category_fach">Fach</string>
    <string name="editor_activity_title_neues_fach">Neues Fach hinzufügen</string>
    <string name="editor_activity_title_fach_bearbeiten">Fach bearbeiten</string>
    <string name="editor_insert_fach_failed">Fach hinzufügen fehlgeschlagen</string>
    <string name="editor_insert_face_successful">Fach erfolgreich hinzugefügt</string>
    <string name="editor_update_fach_failed">Fach bearbeiten fehlgeschlagen</string>
    <string name="editor_update_fach_successful">fach bearbeiten erfolgreich</string>
    <string name="action_delete">Löschen</string>
    <string name="action_save">Speichern</string>
    <string name="delete_dialog_msg">Soll das Fach wirklich gelöscht werden?</string>
    <string name="delete">Löschen</string>
    <string name="editor_delete_fach_failed">Fach löschen fehlgeschlagen</string>
    <string name="editor_delete_fach_successful">Fach erfolgreich gelöscht</string>
    <string name="cancel">Abbrechen</string>
    <string name="unsaved_changes_dialog_msg">Achtung - nicht gespeicherte Änderungen</string>
    <string name="discard">Verwerfen</string>
    <string name="keep_editing">Weiter bearbeiten</string>
    <string name="leere_noten_view_text">Keine Noten eingetragen</string>
    <string name="fach_bearbeiten">Fach Bearbeiten</string>
    <string name="category_note">Note</string>
    <string name="hint_note_beschreibung">z.B. Klassenarbeit 1</string>
    <string name="hint_note">z.B. 1,5</string>
    <string name="category_note_beschreibung">Beschreibung</string>
    <string name="editor_activity_title_neues_note">Neue Note hinzufügen</string>
    <string name="editor_activity_title_note_bearbeiten">Note Bearbeiten</string>
    <string name="editor_insert_note_failed">Note hinzufügen fehlgeschlagen</string>
    <string name="editor_insert_note_successful">Note erfolgreich hinzugefügt</string>
    <string name="editor_update_note_failed">Note bearbeiten fehlgeschlagen</string>
    <string name="editor_update_note_successful">Note bearbeiten erfolgreich</string>
    <string name="delete_dialog_msg_note">Achtung, soll die Note wirklich gelöscht werden</string>
    <string name="editor_delete_note_failed">Note Löschen fehlgeschlagen</string>
    <string name="editor_delete_note_successful">Note erfolgreich gelöscht</string>

    <string name="passCurrentSubjectID">passCurrentSubjectID</string>
    <string name="passCurrentSubjectName">passCurrentSubjectName</string>
    <string name="category_gewichtung">Gewichtung</string>
    <string name="hint_gewichtung">z.B. 1.0</string>
    <string name="ueberschrift_ID">ID</string>
    <string name="ueberschrift_beschreibung">Beschreibung</string>
    <string name="ueberschrift_gewichtung">Gewichtung</string>
    <string name="ueberschrift_note">Note</string>
    <string name="durchschnitt_name">Durchschnitt</string>
    <string name="ueberschrift_fach">Fach</string>
    <string name="ueberschrift_durchschnitt">Durchschnitt</string>
</resources>
