<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaecherActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Überschrift-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:padding="@dimen/activity_margin"
            android:background="@color/colorPrimaryLight"
            android:id="@+id/ueberschrift_linear_layout">
            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/ueberschrift_fach"
                android:text="@string/ueberschrift_fach"
                style="@style/UeberschriftStyle" />
            <TextView
                android:layout_width="100sp"
                android:layout_height="match_parent"
                android:id="@+id/ueberschrift_durchschnitt"
                android:text="@string/ueberschrift_durchschnitt"
                style="@style/UeberschriftStyle" />

            </LinearLayout>

        <!-- Seperator -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:id="@+id/ueberschrift_seperator"/>
        <ListView
            android:id="@+id/faecher_list"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/leerer_text_view_faecher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/leerer_fach_view_text"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_faecher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_black_24dp"/>

</RelativeLayout>
